Update to Java 25.